Wed Dec 17 23:58:05 2003  Tim Janik  <timj@gtk.org>

	* sfidl-generator.cc: allow NULL rec/seq on _copy_shallow().
	this also removes _copy_shallow_internal(), indentation fixes.
	added FIXMEs that still need to be taken care off.

	* sfiglue.c (sfi_glue_vcall_rec): do't create empty record
	instead of NULL returns.

Wed Dec 17 19:15:30 2003  Tim Janik  <timj@gtk.org>

	* glib-extra.c (g_option_find_value): fixed lookup bug.
	continue string searches after wrong substring matches.

Tue Dec 16 11:52:25 2003  Tim Janik  <timj@gtk.org>

	* sfidl-module.cc: provide static accessors in generated Base objects
	for authors and license info strings.

	* sfivalues.[hc]: renamed sfi_value_rec_take_ref() to
	sfi_value_new_take_rec() and sfi_value_seq_take_ref() to
	sfi_value_new_take_seq(). adapted callers.

Mon Dec 15 22:45:23 2003  Tim Janik  <timj@gtk.org>

	* sfiparams.h: document :skip-default: and :skip-undo: property options.

Mon Dec 15 15:30:57 2003  Tim Janik  <timj@gtk.org>

	* sfidl-module.cc: auto-prepend "/Modules/" to plugin categories, as
	this part of the category string should not be translated, and
	is redundant in idl files.

Sat Dec 13 19:09:47 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-parser.*: Support parsing for i18n'd strings in property
	groups, stream and info declarations.

	* sfidl-generator.* sfidl-module.*: Write out i18n'd strings when
	required by the IDL file.

	* testidl.idl: The syntax 'property "X-Group" Real y;' for groups is
	no longer supported.

Wed Dec 10 09:20:33 2003  Tim Janik  <timj@gtk.org>

	* sfinote.c: support parsing upper and lower case notes.
	for string conversions, switched to uppercase note names.

Mon Dec  8 16:38:32 2003  Tim Janik  <timj@gtk.org>

	* sfinote.c (sfi_note_from_string_err): error handling fixup.

Sat Dec  6 02:36:49 2003  Tim Janik  <timj@gtk.org>

	* glib-extra.[hc]: added (moved from sfi)
	g_param_spec_set_options(), g_param_spec_check_option(),