@@ -1,6 +1,4 @@
 FIXMES:
-- allow NULL records and sequences (categories)
-- category() method in plugins leaks across reloads
 - bsedefs.h should define _() only for BSE_COMPILATION
 - apply editable and sensitive to params
 - destroy piano roll dialog if part is released
